<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Travel Companion">
    ]>
<resources>
    <string name="app_name">Travel Companion</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--facebook login-->
    <string name="facebook_app_id">1954128804597114</string>
    <string name="fb_login_protocol_scheme">fb1954128804597114</string>

    <string name="skip_login">Skip login ></string>
    <string name="title_home">Home</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="anonymous">Anonymously</string>
    <string name="user_image">User image</string>
    <string name="title_explore">Explore</string>
    <string name="title_promos">Promotions</string>
    <string name="title_profile">Profile</string>

    <string name="email">Email</string>
    <string name="not_in_database">was not found in the Database.</string>
    <string name="register_email">Do you want to register with this email?</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</string>
    <string name="lorem_ipsum_small">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </string>
    <string name="lorem_ipsum_mini">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="register">Register</string>
    <string name="photo_of_travel">Photo of travel location</string>
    <string name="no_internet">No internet connection available</string>
    <string name="logged_in">Logged in</string>
    <string name="as">as</string>
    <string name="comments_icon">Comments icon</string>
    <string name="price_tag">Price Tag</string>
    <string name="welcome">Welcome</string>
    <string name="options">Options</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="favorites">Favorites</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_account">My Account</string>
    <string name="back_arrow">Back arrow, close drawer</string>
    <string name="account">Account</string>
    <string name="communicate">Communicate</string>
    <string name="go_back">Go to previous screen</string>
    <string name="edit">edit</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="send">Send</string>
    <string name="your_rating">Your rating:</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Write Comment</string>
    <string name="empty_message">Empty message</string>
    <string name="sign_in_to_comment">Please sign In to comment</string>
    <string name="rating_required">Your rating is required</string>
    <string name="loading_animation">Loading animation</string>
    <string name="no_data">No data to display</string>
    <string name="available">Available Travels</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="app_email" translatable="false">mailto:sergiocrz@gmail.com</string>
    <string name="has_email">Do you have an email APP installed?</string>
    <string name="send_your_comments_and_feedback">Send your comments and feedback</string>
    <string name="feedback_image">Feedback Image</string>
    <string name="login_with_accounts">Log in with your social media accounts or email</string>

    <string name="share_app_text">Hey!\nCheck out this awesome travel app! It\'s called &appname;</string>
    <string name="app_url">https://github.com/SerggioC/Capstone</string>
    <string name="notifications_off">Off</string>
    <string name="notifications_on">On</string>
    <string name="allow_notifications">Notifications</string>
    <string name="main_notification_channel_name">main</string>

    <string name="notification_pref_key">notification_preference_key</string>
    <string name="applications_settings">Applications Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="authentication">Authentication</string>
    <string name="sale">SALE</string>
    <string name="on_sale">On Sale!</string>
    <string name="save_to_favorites">Save to Favorites</string>
    <string name="my_favorite_travel">My Favorite Travel Destinations</string>
    <string name="email_signin_ok">Signed In With Email Successfully!</string>
    <string name="email_signin_fail">Sign In With Email Failed</string>
    <string name="could_not_login">Could not log in</string>
    <string name="unregistered_email">Unregistered e-mail</string>
    <string name="created_email_login">Created new Email/Password login!</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="err_fb_login">Error: Facebook Login</string>
    <string name="err_twitter_login">twitter login failure</string>
    <string name="anonym_sign_in">Anonymous sign in</string>
    <string name="anonym_auth_failed">Anonymous Authentication failed.</string>
    <string name="google_signin_ok">Google sign in success!</string>
    <string name="google_signin_failed">Google Authentication failed.</string>
    <string name="fb_sign_in_ok">Facebook sign in success</string>
    <string name="fb_auth_failed">Facebook Authentication failed.</string>
    <string name="twitter_sign_in_ok">Twitter sign in success</string>
    <string name="twitter_auth_failed">Twitter Authentication failed.</string>
    <string name="auth_with">Authenticated with</string>
    <string name="null_snapshot">null snapshot</string>
    <string name="db_error">Database Error:</string>
    <string name="creating_new_user">Creating new User</string>
    <string name="could_not_create_user_db_error">Could not create new user. Database error!</string>
    <string name="invalid_email">Invalid e-mail</string>
    <string name="fav_saved_long_remove">Favorite saved. Long Press to remove.</string>
    <string name="error_not_saved">Error. not saved.</string>
    <string name="removed_from_favorites">Removed from Favorites.</string>
    <string name="login_to_save_favs">Please login to save your favorite destinations</string>
    <string name="lisbon">Lisbon</string>
    <string name="sad_rating">We are sad! \uD83D\uDE25</string>
    <string name="just_2_stars_rating">Just two stars? \uD83D\uDE15</string>
    <string name="ok_rating">OK \uD83D\uDE05</string>
    <string name="good_rating">Good! \uD83D\uDC4D</string>
    <string name="great_rating">Great!! \uD83D\uDE03</string>
    <string name="awesome_rating">\uD83C\uDF1F Awesome!! \uD83C\uDF1F \uD83D\uDE0D</string>
    <string name="explore_our_travel_locations">Explore Our Travel Locations</string>
    <string name="travel">Travel</string>
    <string name="companion">Companion</string>

</resources>
