<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:checkableBehavior="single"
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_login"
                android:visible="false"
                android:title="@string/login"/>
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_favorite"
                android:title="@string/my_favorites"/>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_user_round"
                android:title="@string/my_account"/>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_power"
                android:title="@string/logout"/>
        </menu>

    </item>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback"/>
            <item
                android:id="@+id/nav_options"
                android:icon="@drawable/ic_settings"
                android:title="@string/options"/>
        </menu>
    </item>


</menu>
