<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="comment"
            type="com.sergiocruz.capstone.model.Comment"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/activity_send_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/full_margin"
                android:gravity="center_horizontal"
                android:text="@string/send_your_comments_and_feedback"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textSize="20sp"/>

            <ImageView
                android:id="@+id/image_mailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/feedback_image"
                android:gravity="center_horizontal"
                android:src="@drawable/feedback_image"
                android:textAlignment="center"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/feedback_textview_background"
                android:gravity="start"
                android:maxWidth="300dp"
                android:minWidth="400dp"
                android:padding="8dp"
                android:textAlignment="viewStart"/>

            <Button
                android:id="@+id/send_buttton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/send"/>

        </LinearLayout>
    </ScrollView>
</layout>