<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:maxWidth="400dp"
    android:paddingBottom="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/commentInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/comments_background"
        android:theme="@style/TextInputLayoutTheme"
        app:counterEnabled="false"
        app:counterTextAppearance="@style/AppTheme"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--android:imeActionLabel="@string/send"-->
        <!--android:imeActionId="1"-->
        <EditText
            android:id="@+id/comment_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:hint="@string/write_comment"
            android:imeOptions="actionSend"
            android:inputType="text|textLongMessage|textImeMultiLine|textAutoCorrect"
            android:lines="2"
            android:scrollbars="vertical"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatRatingBar
        android:id="@+id/ratingBar"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:isIndicator="false"
        android:progressTint="@color/colorAccent"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_textview"
        tools:numStars="5"
        tools:progress="70"/>

    <Button
        android:id="@+id/send_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="4dp"
        android:text="@string/send"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/your_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentInputLayout"/>

</android.support.constraint.ConstraintLayout>